27-Nov-2012 Adding in C.ICCompilerOptions.CharacterSet to select the target character set for the compiled code. Support may vary between compilers.

27-Nov-2012 Adding C.IWinImportLibrary interface, that classes implementing C.ILinkerTool also need to implement if they support generating a Windows import library for dynamic libraries.

26-Nov-2012 Adding Opus.Core.Exception constructor that accepts a format string and a variable number of arguments.

25-Nov-2012 Opus.Core.IModule now only lists the required option and proxy path methods/properties. Opus.Core.BaseModule is a new abstract class (implementing IModule) that each module class must now derive from. This allows virtually all of the common methods to be implemented in the base class to simplify the derived module classes. Also, option updates are now performed through a clean interface in user written module instances.

22-Nov-2012 Renamed compiler specific CPlusPlusXYZ classes to CxxXYZ.

22-Nov-2012 Renamed C.ETargetLanguage.CPlusPlus to C.ETargetLanguage.Cxx.

22-Nov-2012 Renamed the namespace C.CPlusPlus to C.Cxx.

22-Nov-2012 C.ICPlusPlusCompilerOptions has been renamed to C.ICxxCompilerOptions.

21-Nov-2012 Exception reporting has been inverted so that the innermost exception is now reported first, alongwith it's callstack. This ensures that the most relevant exception message appears first.

19-Nov-2012 Opus.Core.ITargetFilters no longer accepts a Toolchains keyword attribute, but now a ToolsetTypes System.Type[] keyword attribute. Generally, use typeof(package.Toolset) to fill out this attribute.

16-Nov-2012 CSharp package no longer has a -CSharp.toolchain action. This is due to changes to where the C# compiler is location (now the DotNetFramework package).

15-Nov-2012 CommandLineProcessor.Processor.Execute no longer takes a string for the executable path, since it can be derived from the ITool and the Node's Target.
