@@ -77,6 +77,7 @@
     <Compile Include="Actions\EnableDebugSymbolsInBuildsAction.cs" />
     <Compile Include="Actions\HelpAction.cs" />
     <Compile Include="Actions\NoCacheAction.cs" />
+    <Compile Include="Actions\PackageVersionAction.cs" />
     <Compile Include="Actions\RemoveDefineAction.cs" />
     <Compile Include="Actions\RemoveDependencyAction.cs" />
     <Compile Include="Actions\RemoveDotNetAssemblyAction.cs" />
